# controllers/friendsController.js
@@ -1,21 +1,9 @@
-const { default: mongoose } = require("mongoose");
-const FriendRequest = require("../schemas/FriendRequestSchema");
-const UserSchema = require("../schemas/User");
-var User = mongoose.model("User", UserSchema);
+const friendService = require("../services/friendsServices");
 
 exports.sendFriendRequest = async (req, res) => {
   const { userId, email } = req.body;
-
   try {
-    const recipient = await User.findOne({ email });
-    if (!recipient) return res.status(404).json({ error: "User not found" });
-
-    const friendRequest = new FriendRequest({
-      requester: userId,
-      recipient: recipient._id,
-    });
-    await friendRequest.save();
-
+    const friendRequest = await friendService.sendFriendRequest(userId, email);
     res.status(201).json(friendRequest);
   } catch (error) {
     res.status(500).json({ error: error.message });
@@ -24,12 +12,8 @@ exports.sendFriendRequest = async (req, res) => {
 
 exports.getFriendRequests = async (req, res) => {
   const { userId } = req.params;
-  console.log(userId);
   try {
-    const friendRequests = await FriendRequest.find({
-      recipient: userId,
-      status: "pending",
-    }).populate("requester");
+    const friendRequests = await friendService.getFriendRequests(userId);
     res.status(200).json(friendRequests);
   } catch (error) {
     res.status(500).json({ error: error.message });
@@ -39,8 +23,8 @@ exports.getFriendRequests = async (req, res) => {
 exports.getFriends = async (req, res) => {
   const { userId } = req.params;
   try {
-    const user = await User.findById(userId).populate("friends");
-    res.status(200).json(user.friends);
+    const friends = await friendService.getFriends(userId);
+    res.status(200).json(friends);
   } catch (error) {
     res.status(500).json({ error: error.message });
   }
@@ -48,35 +32,18 @@ exports.getFriends = async (req, res) => {
 
 exports.acceptFriendRequest = async (req, res) => {
   const { requestId } = req.body;
-
   try {
-    const friendRequest = await FriendRequest.findById(requestId);
-    if (!friendRequest)
-      return res.status(404).json({ error: "Friend request not found" });
-
-    friendRequest.status = "accepted";
-    await friendRequest.save();
-
-    await User.findByIdAndUpdate(friendRequest.requester, {
-      $push: { friends: friendRequest.recipient },
-    });
-    await User.findByIdAndUpdate(friendRequest.recipient, {
-      $push: { friends: friendRequest.requester },
-    });
-
+    const friendRequest = await friendService.acceptFriendRequest(requestId);
     res.status(200).json(friendRequest);
   } catch (error) {
     res.status(500).json({ error: error.message });
   }
 };
 
-// Delete friend
 exports.deleteFriend = async (req, res) => {
   const { friendId, userId } = req.body;
-
   try {
-    await User.findByIdAndUpdate(userId, { $pull: { friends: friendId } });
-    await User.findByIdAndUpdate(friendId, { $pull: { friends: userId } });
+    await friendService.deleteFriend(userId, friendId);
     res.status(200).json({ message: "Friend deleted" });
   } catch (error) {
     res.status(500).json({ error: error.message });
