# schemas/User.js
@@ -17,12 +17,12 @@ const UserSchema = mongoose.Schema({
     index: true,
     unique: true,
     required: true,
-    // validate: {
-    //   validator: function (v) {
-    //     return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(v);
-    //   },
-    //   message: (props) => `${props.value} is not a valid email address!`,
-    // },
+    validate: {
+      validator: function (v) {
+        return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(v);
+      },
+      message: (props) => `${props.value} is not a valid email address!`,
+    },
   },
   phone: {
     type: String,
@@ -30,18 +30,24 @@ const UserSchema = mongoose.Schema({
   password: {
     type: String,
     required: true,
-    // minlength: 8,
-    // maxlength: 12,
-    // validate: {
-    //   validator: function (v) {
-    //     return /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,12}$/.test(
-    //       v
-    //     );
-    //   },
-    //   message: (props) =>
-    //     `Password must be between 8 and 12 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character.`,
-    // },
+    minlength: 8,
+    maxlength: 72, // Pour supporter le hachage bcrypt
+    validate: {
+      validator: function (v) {
+        // Vérifie uniquement si le mot de passe est encore en texte clair
+        return (
+          v.length <= 12 &&
+          /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,12}$/.test(
+            v
+          )
+        );
+      },
+      message: (props) =>
+        `Password must be between 8 and 12 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character.`,
+    },
+    select: false, // Optionnel : exclure le mot de passe des requêtes utilisateur
   },
+
   lastLogin: {
     type: Date,
     default: null,
